# datathon-selecao-candidatos-rh

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Documents/datathon-selecao-candidatos-rh-main/: .gitignore  Dockerfile  alembic.ini  app.db  requirements.txt
Documents/datathon-selecao-candidatos-rh-main/datathon/: app.py
Documents/datathon-selecao-candidatos-rh-main/datathon/core/: logging_config.py
Documents/datathon-selecao-candidatos-rh-main/datathon/db/: database.py
Documents/datathon-selecao-candidatos-rh-main/datathon/dependencies/: security.py
Documents/datathon-selecao-candidatos-rh-main/datathon/routers/: predict.py
Documents/datathon-selecao-candidatos-rh-main/migrations/: env.py
Documents/datathon-selecao-candidatos-rh-main/migrations/versions/: b4452680c4a0_create_users_table.py
Documents/datathon-selecao-candidatos-rh-main/tests/: conftest.py  test_auth.py  test_predict.py  test_users.py
datathon/: app.py  schemas.py
datathon/db/: database.py
datathon/ml_models/: Datathon_Fase5_Modelo.ipynb  pre-processamento-embeddings  predict_service.py
datathon/routers/: auth.py  predict.py  users.py
migrations/: env.py
tests/: test_app.py  test_db.py
